<resources xmlns:tools="http://schemas.android.com/tools">

    <!-- ACTIVITY AND FRAGMENT NAME -->
    <string name="app_name">Go4Lunch</string>
    <string name="title_activity_main">I\'m Hungry!</string>
    <string name="title_fragment_workmates">Available workmates</string>
    <string name="title_fragment_chat" translatable="false">Chat</string>
    <string name="title_activity_settings">Settings</string>

    <!-- MENU -->
    <!-- Nav Drawer -->
    <string name="navigation_drawer_your_lunch">YOUR LUNCH</string>
    <string name="navigation_drawer_settings">SETTINGS</string>
    <string name="navigation_drawer_log_out">LOGOUT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- Menu Search -->
    <string name="menu_item_search">Search</string>
    <string name="activity_main_search_edit_text_hint">Search restaurant</string>
    <!-- Nav bottom -->
    <string name="activity_main_menu_bottom_map">Map View</string>
    <string name="activity_main_menu_bottom_list">List View</string>
    <string name="activity_main_menu_bottom_workmates">Workmates</string>
    <string name="activity_main_menu_bottom_chat" translatable="false">Chat</string>

    <!-- MAIN ACTIVITY -->
    <!-- Layout Login -->
    <string name="activity_login_text_presentation">Find a nice restaurant and invite your co-workers for lunch!</string>
    <string name="activity_login_button_email">Sign in with Email</string>
    <string name="activity_login_button_google">Sign in with Google</string>
    <string name="activity_login_button_facebook">Sign in with Facebook</string>
    <string name="activity_login_button_twitter">Sign in with Twitter</string>
    <!-- Messages login -->
    <string name="error_not_connected">You need to sign in !</string>
    <string name="error_authentication_canceled">Authentication canceled !</string>
    <string name="error_no_internet">No network connexion !</string>
    <string name="error_unknown_error">Unknown error append !</string>
    <string name="connection_succeed">Success login !</string>
    <!-- Your Lunch -->
    <string name="activity_main_message_no_booked_restaurant">You haven\'t booked restaurant !</string>

    <!-- MAPS FRAGMENT -->
    <string name="fragment_maps_popup_title_permission_location">This application need location permission.</string>
    <string name="fragment_maps_no_place_found">No Place found !</string>

    <!-- RESTAURANT LIST FRAGMENT -->
    <string name="fragment_restaurant_list_snackbar_refresh_nearby_restaurant">Only restaurant nearby your position !</string>

    <!-- CHAT FRAGMENT -->
    <string name="fragment_chat_text_input_title">Write your message</string>
    <string name="fragment_chat_button_title">SEND</string>
    <string name="fragment_chat_text_view_error">There isn\'t message in this chat for now&#8230;</string>
    <string name="fragment_chat_popup_title_permission_files_access">This application need storage permission.</string>
    <string name="fragment_chat_toast_title_no_image_chosen">No image chosen&#8230;</string>
    
    <!-- RESTAURANT DETAIL ACTIVITY -->
    <string name="activity_restaurant_detail_popup_title_permission_call">This application need call permission.</string>
    <string name="activity_restaurant_detail_text_call">Call</string>
    <string name="activity_restaurant_detail_text_like">Like</string>
    <string name="activity_restaurant_detail_text_website">Website</string>
    <string name="activity_restaurant_detail_no_restaurant_data">No restaurant data, swipe to refresh !</string>
    <string name="activity_restaurant_detail_restaurant_booked">Restaurant booked !</string>
    <string name="activity_restaurant_detail_restaurant_unbooked">Restaurant unbooked !</string>
    <string name="activity_restaurant_detail_snackbar_add_like">Like add for restaurant !</string>
    <string name="activity_restaurant_detail_snackbar_already_like">You already like this restaurant !\nClick again to unlike !</string>
    <string name="activity_restaurant_detail_snackbar_remove_like">Restaurant unlike !</string>

    <!-- VIEW MODEL -->
    <string name="view_model_toast_request_failure">Google Place time out …</string>

    <!-- GO4LUNCH UTILS -->
    <string name="go4lunch_utils_text_user_joining">%1$s is joining !</string>
    <string name="go4lunch_utils_text_user_eating_at">%1$s is eating %2$s (%3$s)</string>
    <string name="go4lunch_utils_text_user_eating_at_without_type">%1$s is eating at (%2$s)</string>
    <string name="go4lunch_utils_text_user_eating_not_decided">%1$s hasn\'t decided yet</string>
    <string name="go4lunch_utils_opening_hours_open_until">Open until %1$s</string>
    <string name="go4lunch_utils_opening_hours_open_at">Open at %1$s</string>
    <string name="go4lunch_utils_opening_hours_next_open_hour">"Open %1$s at "</string>
    <string name="go4lunch_utils_opening_hours_close">Closing soon !</string>
    <string name="go4lunch_utils_opening_hours_no_data">No opening hours data !</string>
    <string name="go4lunch_utils_restaurant_distance_no_data">No data</string>

    <!-- SETTINGS ACTIVITY -->
    <string name="activity_settings_text_category_notification" translatable="false">Notifications</string>
    <string name="activity_settings_text_notifications_state">Enable notifications</string>
    <string name="activity_settings_text_notifications_description">One notification per day, at 12am, when a restaurant is booked.</string>
    <string name="activity_settings_text_notifications_disable_week_end">Disable notification for Week End</string>
    <string name="activity_settings_text_notifications_disable_week_end_description">Disable notification for the Week End, Saturday and Sunday.</string>
    <string name="activity_settings_text_category_reset_booked_restaurant">Booked Restaurant</string>
    <string name="activity_settings_text_reset_booked_restaurant">Reset booked restaurant</string>
    <string name="activity_settings_text_reset_booked_restaurant_description">Reset booked restaurant every day, after lunch, at 2.30pm.</string>
    <string name="activity_settings_text_category_map">Map</string>
    <string name="activity_settings_text_map_zoom_size">Map zoom level</string>
    <string name="activity_settings_text_map_zoom_size_description">Set zoom level for the map, default 18, min 2, max 21.</string>
    <string name="activity_settings_text_map_zoom_button">Enable map zoom button</string>
    <string name="activity_settings_text_map_zoom_button_description">Show map zoom button, to control map zoom.</string>
    <string name="activity_settings_text_map_auto_refresh_location">Auto refresh location</string>
    <string name="activity_settings_text_map_auto_refresh_location_description">Refresh your location every 5 sec. Refresh map and restaurants if your location change.</string>
    <string name="activity_settings_text_category_reset_settings">Reset Settings</string>
    <string name="activity_settings_text_reset_settings">Reset Settings</string>
    <string name="activity_settings_text_reset_settings_description">Reset settings to original state.</string>
    <!-- Alert Dialog -->
    <string name="activity_settings_dialog_reset_settings_message">Are you sure you want reset settings to default?</string>
    <string name="activity_settings_dialog_positive_button" translatable="false">OK</string>
    <string name="activity_settings_dialog_negative_button">Cancel</string>
    <!-- Toast -->
    <string name="activity_settings_toast_zoom_level_wrong_value">Zoom level must be under 2 and 21 !</string>
    <string name="activity_settings_toast_reset_settings_default">Settings Reset to default !</string>


    <!-- NOTIFICATION -->
    <string name="notification_title">You lunch at %1$s, %2$s</string>
    <string name="notification_text">"Joining workmates : "</string>
    <string name="notification_text_joining_users_and">", and "</string>
    <string name="notification_text_no_joining_user">Nobody lunch with you …</string>

    <!-- FACEBOOK PURPOSE -->
    <string name="facebook_application_id" translatable="false">2475450979175039</string>
    <string name="facebook_login_protocol_scheme" translatable="false" tools:ignore="UnusedResources">fb2475450979175039</string>

    <!-- TWITTER PURPOSE -->
    <string name="twitter_consumer_key" translatable="false">4wAnm8B6ASiWMdCPTTuwSlIRd</string>
    <string name="twitter_consumer_secret" translatable="false">n7xapY3YccZ7FuOTdtCQyxrYvOuoUcs7Pfo9PPVJsG28WxXXVn</string>

</resources>